<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/body"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:rotation="0"
    android:padding="0dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".WalletActivity"
    >

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="left"
        android:paddingLeft="10sp"
        android:paddingTop="20sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Settings"
        android:src="@drawable/settings_gear" />

    <Spinner
        android:id="@+id/drop_down_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:layout_gravity="left"
        android:paddingLeft="10sp"
        android:visibility="gone"
       />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_info"
        android:textAlignment="center"
        android:padding="30sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins" />

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_die"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@color/colorAccent"
        android:textSize="86sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_prev_roll_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_roll"/>

        <TextView
            android:id="@+id/txt_prev_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_single_sixes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixes_rolled" />

        <TextView
            android:id="@+id/txt_single_sixes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/txt_total_rolls_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_dice_rolls" />

        <TextView
            android:id="@+id/txt_total_rolls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_double_sixes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_sixes" />

        <TextView
            android:id="@+id/txt_double_sixes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/txt_double_others_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_others" />

        <TextView
            android:id="@+id/txt_double_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />

    </LinearLayout>

</LinearLayout>
